[package]
name = "miden-parsing"
version = "0.1.0"
description = "Reusable parsing components for use in Miden projects"
authors = ["miden contributors"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/0xPolygonMiden/miden-parsing"
categories = ["Compilers"]
keywords = ["miden"]
edition = "2021"
rust-version = "1.67"

[dependencies]
miden-diagnostics = { package = "miden-diagnostics", version = "0.1" }
thiserror = "1.0"

[dev-dependencies]
pretty_assertions = "1.0"
